--- a/package.json
+++ b/package.json
@@ -4,43 +4,42 @@
   "description": "WOOOD Delivery Date Picker - Modern Shopify Checkout Extension with React Query, itty-router, and webhook-based architecture powered by Cloudflare Workers for global performance",
   "private": true,
   "scripts": {
-    "dev": "cd workers && wrangler dev --env development",
+    "dev": "concurrently \"npm run dev:workers\" \"wait-on https://localhost:8787/health && npm run dev:shopify\" --names \"workers,shopify\" --prefix-colors \"blue,green\" --kill-others-on-fail",
     "dev:workers": "cd workers && wrangler dev --env development --port 8787",
-    "dev:extensions": "shopify app dev --no-update",
-    "dev:full": "concurrently \"yarn dev:workers\" \"yarn dev:extensions\" --names \"workers,extensions\" --prefix-colors \"blue,green\"",
-    "dev:integrated": "concurrently \"yarn dev:workers\" \"wait-on https://localhost:8787/health && yarn dev:extensions\" --names \"workers,shopify\" --prefix-colors \"blue,green\" --kill-others-on-fail",
-    "build": "yarn build:cloudflare",
-    "build:cloudflare": "yarn build:workers",
-    "build:complete": "yarn build:workers && yarn build:extensions:standalone && yarn build:frontend",
-    "build:full": "yarn build:workers && yarn build:extensions && yarn build:frontend",
-    "build:workers": "cd workers && yarn install && wrangler build",
-    "build:frontend": "cd frontend && yarn install && yarn build",
-    "build:extensions": "yarn build:date-picker && yarn build:shipping-method",
-    "build:extensions:standalone": "yarn build:date-picker:standalone && yarn build:shipping-method:standalone",
-    "build:date-picker": "cd extensions/date-picker && yarn install && yarn build",
-    "build:date-picker:standalone": "cd extensions/date-picker && yarn install && yarn build:standalone",
-    "build:shipping-method": "cd extensions/shipping-method && yarn install && yarn build",
-    "build:shipping-method:standalone": "cd extensions/shipping-method && yarn install && yarn build:standalone",
-    "deploy": "cd workers && wrangler deploy --env production",
-    "deploy:dev": "cd workers && wrangler deploy --env development",
-    "deploy:production": "cd workers && wrangler deploy --env production",
-    "secrets:set": "cd workers && wrangler secret put",
-    "config:validate": "shopify app validate",
-    "extensions:dev": "shopify app dev",
-    "extensions:deploy": "shopify app deploy",
+    "dev:shopify": "shopify app dev --no-release",
+    "dev:staging": "concurrently \"npm run dev:workers:staging\" \"wait-on https://localhost:8788/health && npm run dev:shopify:staging\" --names \"workers-staging,shopify-staging\" --prefix-colors \"yellow,orange\" --kill-others-on-fail",
+    "dev:workers:staging": "cd workers && wrangler dev --env staging --port 8788",
+    "dev:shopify:staging": "shopify app dev --config=shopify.app.staging.toml --no-release",
+    "dev:production": "concurrently \"npm run dev:workers:production\" \"wait-on https://localhost:8789/health && npm run dev:shopify:production\" --names \"workers-prod,shopify-prod\" --prefix-colors \"red,magenta\" --kill-others-on-fail",
+    "dev:workers:production": "cd workers && wrangler dev --env production --port 8789",
+    "dev:shopify:production": "shopify app dev --no-release",
+    "build": "npm run build:workers && npm run build:extensions",
+    "build:workers": "cd workers && npm install && wrangler build",
+    "build:extensions": "cd extensions/date-picker && npm install && npm run build && cd ../shipping-method && npm install && npm run build",
+    "deploy": "npm run build && npm run deploy:workers && npm run deploy:shopify",
+    "deploy:workers": "cd workers && wrangler deploy --env production",
+    "deploy:shopify": "shopify app deploy",
+    "deploy:staging": "npm run build && npm run deploy:workers:staging && npm run deploy:shopify:staging",
+    "deploy:workers:staging": "cd workers && wrangler deploy --env staging",
+    "deploy:shopify:staging": "shopify app deploy --config=shopify.app.staging.toml",
+    "deploy:dev": "npm run build && npm run deploy:workers:dev && npm run deploy:shopify:dev",
+    "deploy:workers:dev": "cd workers && wrangler deploy --env development",
+    "deploy:shopify:dev": "shopify app deploy --no-update",
     "logs": "cd workers && wrangler tail",
-    "logs:dev": "cd workers && wrangler tail --env development",
+    "logs:staging": "cd workers && wrangler tail --env staging",
     "logs:production": "cd workers && wrangler tail --env production",
     "health": "curl -k https://localhost:8787/health || exit 1",
-    "health:production": "curl -f https://api.woood-delivery.com/health || exit 1",
-    "clean": "yarn clean:workers && yarn clean:extensions",
-    "clean:workers": "cd workers && rm -rf dist node_modules",
-    "clean:extensions": "yarn clean:date-picker && yarn clean:shipping-method",
-    "clean:date-picker": "cd extensions/date-picker && rm -rf dist node_modules",
-    "clean:shipping-method": "cd extensions/shipping-method && rm -rf dist node_modules",
-    "reset": "yarn clean && rm -rf node_modules && yarn install",
-    "setup": "yarn install && yarn build:cloudflare",
-    "type-check": "cd workers && yarn type-check && cd ../extensions/date-picker && yarn type-check"
+    "health:staging": "curl -f https://woood-staging.leander-4e0.workers.dev/health || exit 1",
+    "health:production": "curl -f https://woood-production.leander-4e0.workers.dev/health || exit 1",
+    "secrets": "cd workers && wrangler secret put",
+    "secrets:staging": "cd workers && wrangler secret put --env staging",
+    "secrets:production": "cd workers && wrangler secret put --env production",
+    "tunnel": "cloudflared tunnel --url https://localhost:8787",
+    "tunnel:staging": "cloudflared tunnel --url https://localhost:8788",
+    "tunnel:production": "cloudflared tunnel --url https://localhost:8789",
+    "clean": "rm -rf node_modules && cd workers && rm -rf node_modules && cd ../extensions/date-picker && rm -rf node_modules && cd ../shipping-method && rm -rf node_modules",
+    "install:all": "npm install && cd workers && npm install && cd ../extensions/date-picker && npm install && cd ../shipping-method && npm install",
+    "reset": "npm run clean && npm run install:all"
   },
   "workspaces": [
     "workers",
