--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -9,10 +9,14 @@ embedded = true
 [webhooks]
 api_version = "2025-04"
 
+[access_scopes]
+# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
+scopes = "read_products,write_checkouts,write_delivery_customizations,write_orders"
+
 [auth]
 redirect_urls = [
   "https://woood-production.leander-4e0.workers.dev/auth/callback"
 ]
 
-[pos]
-embedded = false
+[build]
+include_config_on_deploy = true
