--- a/package.json
+++ b/package.json
@@ -4,42 +4,19 @@
   "description": "WOOOD Delivery Date Picker - Modern Shopify Checkout Extension with React Query, itty-router, and webhook-based architecture powered by Cloudflare Workers for global performance",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run dev:workers\" \"wait-on https://localhost:8787/health && npm run dev:shopify\" --names \"workers,shopify\" --prefix-colors \"blue,green\" --kill-others-on-fail",
-    "dev:workers": "cd workers && wrangler dev --env development --port 8787",
-    "dev:shopify": "shopify app dev --no-release",
-    "dev:staging": "concurrently \"npm run dev:workers:staging\" \"wait-on https://localhost:8788/health && npm run dev:shopify:staging\" --names \"workers-staging,shopify-staging\" --prefix-colors \"yellow,orange\" --kill-others-on-fail",
-    "dev:workers:staging": "cd workers && wrangler dev --env staging --port 8788",
-    "dev:shopify:staging": "shopify app dev --config=shopify.app.staging.toml --no-release",
-    "dev:production": "concurrently \"npm run dev:workers:production\" \"wait-on https://localhost:8789/health && npm run dev:shopify:production\" --names \"workers-prod,shopify-prod\" --prefix-colors \"red,magenta\" --kill-others-on-fail",
-    "dev:workers:production": "cd workers && wrangler dev --env production --port 8789",
-    "dev:shopify:production": "shopify app dev --no-release",
     "build": "npm run build:workers && npm run build:extensions",
     "build:workers": "cd workers && npm install && wrangler build",
     "build:extensions": "cd extensions/date-picker && npm install && npm run build && cd ../shipping-method && npm install && npm run build",
-    "deploy": "npm run build && npm run deploy:workers && npm run deploy:shopify",
-    "deploy:workers": "cd workers && wrangler deploy --env production",
-    "deploy:shopify": "shopify app deploy",
     "deploy:staging": "npm run build && npm run deploy:workers:staging && npm run deploy:shopify:staging",
     "deploy:workers:staging": "cd workers && wrangler deploy --env staging",
     "deploy:shopify:staging": "shopify app deploy --config=shopify.app.staging.toml",
-    "deploy:dev": "npm run build && npm run deploy:workers:dev && npm run deploy:shopify:dev",
-    "deploy:workers:dev": "cd workers && wrangler deploy --env development",
-    "deploy:shopify:dev": "shopify app deploy --no-update",
-    "logs": "cd workers && wrangler tail",
+    "deploy:production": "npm run build && npm run deploy:workers:production && npm run deploy:shopify:production",
+    "deploy:workers:production": "cd workers && wrangler deploy --env production",
+    "deploy:shopify:production": "shopify app deploy",
     "logs:staging": "cd workers && wrangler tail --env staging",
     "logs:production": "cd workers && wrangler tail --env production",
-    "health": "curl -k https://localhost:8787/health || exit 1",
-    "health:staging": "curl -f https://woood-staging.leander-4e0.workers.dev/health || exit 1",
-    "health:production": "curl -f https://woood-production.leander-4e0.workers.dev/health || exit 1",
-    "secrets": "cd workers && wrangler secret put",
-    "secrets:staging": "cd workers && wrangler secret put --env staging",
-    "secrets:production": "cd workers && wrangler secret put --env production",
-    "tunnel": "cloudflared tunnel --url https://localhost:8787",
-    "tunnel:staging": "cloudflared tunnel --url https://localhost:8788",
-    "tunnel:production": "cloudflared tunnel --url https://localhost:8789",
     "clean": "rm -rf node_modules && cd workers && rm -rf node_modules && cd ../extensions/date-picker && rm -rf node_modules && cd ../shipping-method && rm -rf node_modules",
-    "install:all": "npm install && cd workers && npm install && cd ../extensions/date-picker && npm install && cd ../shipping-method && npm install",
-    "reset": "npm run clean && npm run install:all"
+    "install": "npm install && cd workers && npm install && cd ../extensions/date-picker && npm install && cd ../shipping-method && npm install"
   },
   "workspaces": [
     "workers",
@@ -77,10 +54,7 @@
     "@types/node": "^20.17.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "concurrently": "^8.0.0",
-    "cross-env": "^7.0.3",
-    "typescript": "^5.0.0",
-    "wait-on": "^7.0.0"
+    "typescript": "^5.0.0"
   },
   "packageManager": "yarn@1.22.22"
 }
