--- a/workers/tsconfig.json
+++ b/workers/tsconfig.json
@@ -3,13 +3,13 @@
     "target": "ES2022",
     "lib": ["ES2022", "WebWorker"],
     "module": "ES2022",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "allowJs": false,
     "checkJs": false,
     "strict": true,
-    "noEmit": true,
+    "noEmit": false,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -26,6 +26,9 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "removeComments": true,
+    "stripInternal": true,
+    "importHelpers": false,
+    "noEmitHelpers": true,
     "types": [
       "@cloudflare/workers-types"
     ]
@@ -37,6 +40,7 @@
     "node_modules",
     "dist",
     "**/*.test.ts",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "**/*.d.ts"
   ]
 } 
