--- a/workers/wrangler.toml
+++ b/workers/wrangler.toml
@@ -1,101 +1,38 @@
 name = "woood-production"
 main = "src/index.ts"
-compatibility_date = "2024-12-11"
+compatibility_date = "2024-06-01"
 compatibility_flags = ["nodejs_compat"]
 
-# Development server configuration
-[dev]
-local_protocol = "https"
-upstream_protocol = "https"
-port = 8787
+# Environment variables (set via wrangler secret)
+# DUTCHNED_API_URL
+# DUTCHNED_API_CREDENTIALS
+# SHOPIFY_APP_CLIENT_ID
+# SHOPIFY_APP_CLIENT_SECRET
+# SHOPIFY_APP_URL
 
-# ============================================================================
-# DEVELOPMENT ENVIRONMENT
-# ============================================================================
-
-[env.development]
-name = "woood-delivery-api-dev"
-
-[env.development.vars]
-ENVIRONMENT = "development"
-CORS_ORIGINS = "https://localhost:*,https://shop.app,https://checkout.shopify.com,https://pay.shopify.com,https://*.myshopify.com,https://*.shopify.com,https://*.shopifycdn.com,https://extensions.shopifycdn.com"
-DUTCHNED_API_URL = "https://eekhoorn-connector.dutchned.com/api/delivery-dates/available"
-SHOPIFY_API_VERSION = "2025-04"
-SHOPIFY_APP_CLIENT_ID = "1c7701d2e09d4ede7616f35e13d472ef"
-SHOPIFY_APP_URL = "https://woood-staging.leander-4e0.workers.dev"
-ENABLE_MOCK_FALLBACK = "true"
-
-[[env.development.kv_namespaces]]
+[[kv_namespaces]]
 binding = "WOOOD_KV"
-id = "8423effbd4e34e3bb4b84e383b1eb094"
-preview_id = "a119d3d1b509421a844d6e96fe1a8356"
+id = "17189fd27a034c548fd662aa7ffa8415"
 
-# ============================================================================
-# STAGING ENVIRONMENT
-# ============================================================================
-
-[env.staging]
-name = "woood-staging"
-
-[env.staging.vars]
-ENVIRONMENT = "staging"
-CORS_ORIGINS = "https://shop.app,https://checkout.shopify.com,https://pay.shopify.com,https://extensions.shopifycdn.com,https://*.myshopify.com,https://*.shopify.com,https://*.shopifycdn.com"
-DUTCHNED_API_URL = "https://eekhoorn-connector.dutchned.com/api/delivery-dates/available"
-SHOPIFY_API_VERSION = "2025-04"
-SHOPIFY_APP_CLIENT_ID = "10a8926387f7ea9e09395b64b1f798c2"
-SHOPIFY_APP_URL = "https://woood-staging.leander-4e0.workers.dev"
-ENABLE_MOCK_FALLBACK = "false"
-
-[[env.staging.kv_namespaces]]
-binding = "WOOOD_KV"
-id = "8423effbd4e34e3bb4b84e383b1eb094"
-preview_id = "a119d3d1b509421a844d6e96fe1a8356"
-
-[env.staging.observability]
-enabled = true
-head_sampling_rate = 0.1
-
-# ============================================================================
-# PRODUCTION ENVIRONMENT
-# ============================================================================
+[build]
+command = "npm run build"
 
 [env.production]
 name = "woood-production"
 
 [env.production.vars]
-ENVIRONMENT = "production"
-CORS_ORIGINS = "https://shop.app,https://checkout.shopify.com,https://pay.shopify.com,https://extensions.shopifycdn.com,https://*.myshopify.com,https://*.shopify.com,https://*.shopifycdn.com"
-DUTCHNED_API_URL = "https://eekhoorn-connector.dutchned.com/api/delivery-dates/available"
-SHOPIFY_API_VERSION = "2025-04"
-SHOPIFY_APP_CLIENT_ID = "1c7701d2e09d4ede7616f35e13d472ef"
-SHOPIFY_APP_URL = "https://woood-production.leander-4e0.workers.dev"
-ENABLE_MOCK_FALLBACK = "false"
+CORS_ORIGINS = "https://*.myshopify.com,https://checkout.shopify.com"
 
 [[env.production.kv_namespaces]]
 binding = "WOOOD_KV"
-id = "8423effbd4e34e3bb4b84e383b1eb094"
-preview_id = "a119d3d1b509421a844d6e96fe1a8356"
+id = "17189fd27a034c548fd662aa7ffa8415"
 
-[env.production.observability]
-enabled = true
-head_sampling_rate = 0.01
+[env.staging]
+name = "woood-staging"
 
-# ============================================================================
-# SECRETS CONFIGURATION (managed via Cloudflare CLI)
-# ============================================================================
+[env.staging.vars]
+CORS_ORIGINS = "https://*.myshopify.com,https://checkout.shopify.com"
 
-# Required secrets for all environments:
-# wrangler secret put DUTCHNED_API_CREDENTIALS --env [environment]
-# wrangler secret put SHOPIFY_APP_CLIENT_SECRET --env [environment]
-
-# Development secrets:
-# wrangler secret put DUTCHNED_API_CREDENTIALS --env development
-# wrangler secret put SHOPIFY_APP_CLIENT_SECRET --env development
-
-# Staging secrets:
-# wrangler secret put DUTCHNED_API_CREDENTIALS --env staging
-# wrangler secret put SHOPIFY_APP_CLIENT_SECRET --env staging
-
-# Production secrets:
-# wrangler secret put DUTCHNED_API_CREDENTIALS --env production
-# wrangler secret put SHOPIFY_APP_CLIENT_SECRET --env production
+[[env.staging.kv_namespaces]]
+binding = "WOOOD_KV"
+id = "placeholder-kv-namespace-id"
