feat(date-picker): add new setting to show date picker only if products are in stock
- Introduced a new boolean setting in the date picker configuration to conditionally display the date picker based on product stock availability.
- Updated the `shopify.extension.toml` file to include the new field with a default value of false and a descriptive explanation.

This enhancement improves user experience by ensuring that customers only see delivery options for items that are currently in stock.

--- a/extensions/date-picker/shopify.extension.toml
+++ b/extensions/date-picker/shopify.extension.toml
@@ -67,6 +67,13 @@ name = "choices"
 value = "[\"No Filtering\", \"ERP Filtered\"]"
 
 [[extensions.settings.fields]]
+key = "only_show_if_in_stock"
+type = "boolean"
+name = "Only show if in stock"
+default = false
+description = "Only show the date picker if all products in the cart are in stock (Default: false)"
+
+[[extensions.settings.fields]]
 key = "hide_picker_within_days"
 type = "number_integer"
 name = "Hide Picker Within Days"
