feat(experience-center): integrate experience center metafield management and scheduled updates
- Added functionality to set `woood.experiencecenter` metafields for products based on availability from the external Dutch Furniture Fulfillment API.
- Implemented a new endpoint `POST /api/set-experience-center` for setting metafields and `POST /api/trigger-experience-center-update` for manual scheduled updates.
- Enhanced the date picker extension with a new setting for preview mode and updated the configuration files accordingly.
- Updated documentation to reflect new API endpoints and usage examples, ensuring comprehensive guidance for developers.

This integration improves product availability management and enhances user experience by providing accurate delivery options based on real-time data.

--- a/extensions/date-picker/shopify.extension.toml
+++ b/extensions/date-picker/shopify.extension.toml
@@ -98,4 +98,11 @@ name = "Enable Mock Dates"
 default = false
 description = "Enable mock delivery dates for testing (fallback when API is unavailable) (Default: false)"
 
+[[extensions.settings.fields]]
+key = "preview_mode"
+type = "boolean"
+name = "Preview Mode"
+default = false
+description = "Show preview-only UI (for testing in Checkout Editor)"
+
 
