--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,10 +1,13 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-client_id = "1c7701d2e09d4ede7616f35e13d472ef"
-name = "woood CF"
-handle = "woood-2"
+client_id = "10a8926387f7ea9e09395b64b1f798c2"
+name = "woood"
+handle = "woood"
 application_url = "https://woood-production.leander-4e0.workers.dev/"
-embedded = true
+embedded = false
+
+[build]
+include_config_on_deploy = true
 
 [webhooks]
 api_version = "2025-04"
@@ -17,6 +20,3 @@ scopes = "read_products,write_checkouts,write_delivery_customizations,write_orde
 redirect_urls = [
   "https://woood-production.leander-4e0.workers.dev/auth/callback"
 ]
-
-[build]
-include_config_on_deploy = true
