--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -14,7 +14,7 @@ api_version = "2025-04"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_products,write_checkouts,write_delivery_customizations,write_orders"
+scopes = "read_products,write_products,write_checkouts,write_delivery_customizations,write_orders"
 
 [auth]
 redirect_urls = [
