chore(project): update dependencies, refine project structure, and remove unused files
- Updated project dependencies for improved compatibility and performance.
- Refined the .gitignore file to include additional temporary and backup files.
- Removed obsolete files and directories related to the shipping method extension and workers, streamlining the project.
- Enhanced README documentation to reflect the current project structure and features.

This update prepares the project for future development by ensuring a cleaner and more maintainable codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ build/
 # OS files
 **/.DS_Store
 .DS_Store
+.cache
 
 # Editor files
 .vscode/
@@ -27,9 +28,6 @@ build/
 extensions/**/dist
 extensions/**/generated
 shopify.app.*.toml
-
-# Backend specific
-backend/dist/
 
 # Logs
 logs
@@ -49,4 +47,7 @@ coverage/
 
 # Temporary folders
 tmp/
-temp/workers/.dev.vars
+temp/
+
+# Backup files
+*.backup
