--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,12 @@
     "jsx": "react-jsx",
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "~/*": [
+        "app/*"
+      ]
+    }
   },
   "exclude": [
     "node_modules",
