--- a/package.json
+++ b/package.json
@@ -4,45 +4,52 @@
   "description": "WOOOD App - Modern Shopify Checkout Extension with React Query, itty-router, and webhook-based architecture powered by Cloudflare Workers and Shopify Polaris",
   "main": "index.js",
   "scripts": {
-    "build:workers": "cd workers && wrangler build",
-    "build:extensions": "cd extensions/date-picker && yarn build && cd ../shipping-method && yarn build",
-    "deploy:staging": "yarn build && yarn deploy:workers:staging && yarn deploy:shopify:staging",
-    "deploy:workers:staging": "cd workers && wrangler deploy --env staging",
-    "deploy:shopify:staging": "shopify app deploy --config=shopify.app.staging.toml",
-    "deploy:production": "yarn build && yarn deploy:workers:production && yarn deploy:shopify:production",
-    "deploy:workers:production": "cd workers && wrangler deploy --env production",
-    "deploy:shopify:production": "shopify app deploy",
-    "logs:staging": "cd workers && wrangler tail --env staging",
-    "logs:production": "cd workers && wrangler tail --env production",
-    "clean": "rm -rf node_modules && cd workers && rm -rf node_modules && cd ../extensions/date-picker && rm -rf node_modules && cd ../shipping-method && rm -rf node_modules",
-    "install": "yarn install",
-    "dev": "remix dev",
     "build": "remix build",
+    "build:extensions": "cd extensions/date-picker && yarn build",
+    "dev": "remix dev",
+    "dev:staging": "remix dev",
+    "deploy:staging": "npm run build && npx wrangler deploy --env staging",
+    "deploy:production": "npm run build && npx wrangler deploy --env production",
+    "logs:staging": "npx wrangler tail woood-staging --env staging --format pretty",
+    "logs:production": "npx wrangler tail woood-production --env production --format pretty",
+    "clean": "rm -rf node_modules && cd extensions/date-picker && rm -rf node_modules",
     "start": "remix-serve build",
     "typecheck": "tsc",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "lint:fix": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint . --fix"
   },
   "dependencies": {
-    "@shopify/polaris": "^12.0.0",
+    "@remix-run/node": "^2.17.0",
+    "@remix-run/react": "^2.17.0",
     "@shopify/app-bridge": "^3.7.0",
     "@shopify/app-bridge-react": "^3.7.0",
+    "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.8.5",
     "@shopify/shopify-app-session-storage": "^2.0.0",
+    "drizzle-orm": "^0.36.4",
+    "isbot": "^4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "remix": "^2.17.0",
     "remix-serve": "^1.0.3"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250809.0",
+    "@remix-run/cloudflare": "^2.17.0",
     "@remix-run/dev": "^2.17.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@remix-run/serve": "^2.17.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "cross-env": "^7.0.3",
+    "drizzle-kit": "^0.26.2",
     "eslint": "^8.0.0",
     "eslint-plugin-remix": "^1.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^6.3.5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "wrangler": "^4.28.1"
   },
   "engines": {
     "node": ">=18.0.0"
