--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,22 +1,38 @@
-# Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
+# Staging configuration for Shopify app
+client_id = "1c7701d2e09d4ede7616f35e13d472ef"
+application_url = "https://woood-staging.leander-4e0.workers.dev"
+embedded = true
+name = "woood CF (staging)"
+handle = "woood-2"
 
-client_id = "10a8926387f7ea9e09395b64b1f798c2"
-name = "woood"
-handle = "woood"
-application_url = "https://woood-production.leander-4e0.workers.dev/"
-embedded = false
+[access.admin]
+direct_api_mode = "online"
+embedded_app_direct_api_access = true
+
+[access_scopes]
+scopes = "read_products, write_app_proxy, write_checkouts, write_delivery_customizations, write_orders"
+optional_scopes = [ "write_products" ]
+use_legacy_install_flow = false
+
+[app_proxy]
+url = "https://woood-staging.leander-4e0.workers.dev/apps/woood"
+subpath = "woood"
+prefix = "apps"
+
+[auth]
+redirect_urls = [ "https://woood-staging.leander-4e0.workers.dev/shopify/auth/callback" ]
 
 [build]
+automatically_update_urls_on_dev = false
+dev_store_url = "webfluencer-panda.myshopify.com"
 include_config_on_deploy = true
 
 [webhooks]
-api_version = "2025-04"
+api_version = "2025-07"
+  [[webhooks.subscriptions]]
+  uri = "/shopify/webhooks"
+  compliance_topics = [ "customers/data_request", "customers/redact", "shop/redact" ]
+  topics = [ "app/scopes_update", "app/uninstalled" ]
 
-[access_scopes]
-# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_products,write_products,write_checkouts,write_delivery_customizations,write_orders"
-
-[auth]
-redirect_urls = [
-  "https://woood-production.leander-4e0.workers.dev/auth/callback"
-]
+[pos]
+embedded = false
