--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
 		"@types/react": "19.1.9",
 		"@types/react-dom": "19.1.7",
 		"@vitest/browser": "3.2.4",
+		"@vitest/runner": "3.2.4",
+		"@vitest/snapshot": "3.2.4",
 		"concurrently": "9.2.0",
 		"happy-dom": "18.0.1",
 		"playwright": "1.54.2",
@@ -72,5 +74,11 @@
 	},
 	"bin": {
 		"shopflare": "./bin.sh"
+	},
+	"resolutions": {
+		"react": "19.1.1",
+		"react-dom": "19.1.1",
+		"@types/react": "19.1.9",
+		"@types/react-dom": "19.1.7"
 	}
 }
