--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,15 @@ jobs:
           node-version: '22'
           cache: 'npm'
 
+      - name: Remove yarn files
+        run: rm -f yarn.lock yarn-error.log .yarnrc .yarnrc.yml
+
       - name: Install dependencies
         run: npm ci
+        env:
+          NPM_CONFIG_ENGINE_STRICT: true
+          NPM_CONFIG_FUND: false
+          NPM_CONFIG_PROGRESS: false
 
       - name: Build project
         run: npm run build
