--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"build": "shopify app build",
+		"build:web": "react-router build",
 		"check": "concurrently 'npm:check:*'",
 		"check:actions": "if command -v actionlint 2>&1 >/dev/null; then actionlint; fi",
 		"check:code": "(biome check --write || echo 'Biome not available, skipping code check')",
