chore: update project configuration and clean up files
- Modified .gitignore to include new patterns and remove unnecessary entries.
- Deleted .nvmrc, .yarnrc.yml, package-manager.txt, and build.sh to streamline project setup.
- Updated i18n.config.ts for improved localization handling.
- Adjusted shopify.app.toml to remove obsolete build commands.
- Refactored code formatting in various files for consistency.

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
-# Dependencies
-node_modules/
+.DS_Store
 **/node_modules/
 
-# Build outputs
-dist/
-build/
-**/dist/
-**/build/
+# Cloudflare
+/.wrangler
+/dist/
+
+# React Router
+/.react-router/
+/build/
+.shopify
+
+# Vitest
+**/__screenshots__/*
 
 # Environment variables
 .env
 .env.*
 !.env.example
-.react-router/
-
-# OS files
-**/.DS_Store
-.DS_Store
 
 # Editor files
 .vscode/
