--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
 		"react-router": "7.8.0",
 		"valibot": "1.1.0"
 	},
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.21.0"
+  },
 	"devDependencies": {
 		"@biomejs/biome": "2.1.4",
 		"@cloudflare/vite-plugin": "1.11.2",
