--- a/package.json
+++ b/package.json
@@ -39,9 +39,6 @@
 		"react-router": "7.8.0",
 		"valibot": "1.1.0"
 	},
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.21.0"
-  },
 	"devDependencies": {
 		"@biomejs/biome": "2.1.4",
 		"@cloudflare/vite-plugin": "1.11.2",
@@ -70,7 +67,8 @@
 		"wrangler": "4.28.1"
 	},
 	"optionalDependencies": {
-		"@shopify/cli": "3.83.3"
+		"@shopify/cli": "3.83.3",
+		"@rollup/rollup-linux-x64-gnu": "^4.21.0"
 	},
 	"engines": {
 		"node": "^22.14.0",
