tests: move e2e to tests/, add API suite and embedded admin coverage; infra: update Playwright config and clean script; worker: implement status endpoints for store-locator and experience-center; docs: update CHANGELOG; remove legacy workers

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,8 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          workingDirectory: 'workers'
-          command: deploy --env staging
+          workingDirectory: '.'
+          command: deploy
         env:
           SHOPIFY_API_SECRET_KEY: ${{ secrets.SHOPIFY_API_SECRET_KEY }}
           DUTCH_FURNITURE_API_KEY: ${{ secrets.DUTCH_FURNITURE_API_KEY }}
