test: fix lints in E2E and worker tests (no exports, typed KV list, import Env, format imports)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,9 @@ name: Deploy WOOOD App
 
 on:
   push:
-    branches: [shopflare-integration, main]
+    branches: [WOOOD-integration, main]
   pull_request:
-    branches: [shopflare-integration, main]
+    branches: [WOOOD-integration, main]
 
 jobs:
   deploy:
