--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.4",
+		"@biomejs/cli-linux-x64": "2.1.4",
 		"@cloudflare/vite-plugin": "1.11.2",
 		"@cloudflare/vitest-pool-workers": "0.8.61",
 		"@playwright/test": "1.54.2",
