--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"gen:code": "graphql-codegen --errors-only",
 		"gen:types": "wrangler types && react-router typegen",
 		"postinstall": "patch-package",
-		"prepare": "test \"$NODE_ENV\" = \"production\" && exit 0 || (mkdir -p ./app/i18n/en && cp node_modules/@shopify/polaris/locales/en.json ./app/i18n/en/polaris.json && (npm run check:code || true))",
+		"prepare": "if [ \"$CI\" = \"true\" ]; then exit 0; fi; test \"$NODE_ENV\" = \"production\" && exit 0 || (mkdir -p ./app/i18n/en && cp node_modules/@shopify/polaris/locales/en.json ./app/i18n/en/polaris.json && (npm run check:code || true))",
 		"start": "wrangler dev",
 		"test": "vitest --run",
 		"test:e2e": "node --env-file=.env --env-file=.env.test $(npm root)/.bin/playwright test",
@@ -40,6 +40,7 @@
 		"valibot": "1.1.0"
 	},
 	"devDependencies": {
+		"@biomejs/cli-linux-x64": "2.1.4",
 		"@biomejs/biome": "2.1.4",
 		"@cloudflare/vite-plugin": "1.11.2",
 		"@cloudflare/vitest-pool-workers": "0.8.61",
